--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Above Multi-purpose Free Bootstrap Responsive Template</title>
+<title>Sistem Informasi dan Literasi Media di Kalangan Pelajar Masa Kini</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="" />
 <meta name="author" content="http://webthemez.com" />
@@ -39,9 +39,9 @@
                         <li class="active"><a href="index.html">Home</a></li> 
 						<li><a href="about.html">About Us</a></li>
 						<li><a href="courses.html">Courses</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="pricing.html">Pricing</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+<!--                         <li><a href="portfolio.html">Portfolio</a></li> -->
+<!--                         <li><a href="pricing.html">Pricing</a></li> -->
+<!--                         <li><a href="contact.html">Contact</a></li> -->
                     </ul>
                 </div>
             </div>
