--- a/contact.html
+++ b/contact.html
@@ -38,8 +38,8 @@
                         <li><a href="index.html">Home</a></li> 
 						<li><a href="about.html">About Us</a></li>
 						<li><a href="courses.html">Courses</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="pricing.html">Pricing</a></li>
+<!--                         <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="pricing.html">Pricing</a></li> -->
                         <li class="active"><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
