--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><p>RUSERBVOK</p>p</a>
+                    <a class="navbar-brand" href="index.html"><p>RUSERBVOK</p></a>
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
