--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><h1>RUSERBVOK</h1></a>
+                    <li><a class="navbar-brand" href="index.html">RUSERBVOK</a></li>
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
