--- a/index.html
+++ b/index.html
@@ -57,24 +57,24 @@
                 <img src="img/slides/1.jpg" alt="" />
                 <div class="flex-caption">
                    <div class="item_introtext"> 
-					<strong>Online Education</strong>
-					<p>The best educational template</p> </div>
+					<strong>Sistem Informasi dan Literasi Media di Kalangan Pelajar Masa Kini</strong>
+					<p>KELOMPOK 1</p> </div>
                 </div>
               </li>
               <li>
                 <img src="img/slides/2.jpg" alt="" />
                 <div class="flex-caption">
                      <div class="item_introtext"> 
-					<strong>School Education</strong>
-					<p>Get all courses with on-line content</p> </div>
+					<strong>Sistem Informasi dan Literasi Media di Kalangan Pelajar Masa Kini</strong>
+					<p>KELOMPOK 1</p> </div>
                 </div>
               </li>
               <li>
                 <img src="img/slides/3.jpg" alt="" />
                 <div class="flex-caption">
                      <div class="item_introtext"> 
-					<strong>Collage Education</strong>
-					<p>Awesome Template get it know</p> </div>
+					<strong>Sistem Informasi dan Literasi Media di Kalangan Pelajar Masa Kini</strong>
+					<p>KELOMPOK 1</p> </div>
                 </div>
               </li>
             </ul>
