--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 <img src="img/slides/1.jpg" alt="" />
                 <div class="flex-caption">
                    <div class="item_introtext"> 
-					<strong>Sistem Informasi dan Literasi Media di Kalangan Pelajar Masa Kini</strong>
+					<strong>Sistem Informasi dan Literasi Media</strong>
+			   		<strong>Di Kalangan Pelajar Masa Kini</strong>
 					<p>KELOMPOK 1</p> </div>
                 </div>
               </li>
@@ -65,7 +66,8 @@
                 <img src="img/slides/2.jpg" alt="" />
                 <div class="flex-caption">
                      <div class="item_introtext"> 
-					<strong>Sistem Informasi dan Literasi Media di Kalangan Pelajar Masa Kini</strong>
+					<strong>Sistem Informasi dan Literasi Media</strong>
+			     		<strong>Di Kalangan Pelajar Masa Kini</strong>
 					<p>KELOMPOK 1</p> </div>
                 </div>
               </li>
@@ -73,7 +75,8 @@
                 <img src="img/slides/3.jpg" alt="" />
                 <div class="flex-caption">
                      <div class="item_introtext"> 
-					<strong>Sistem Informasi dan Literasi Media di Kalangan Pelajar Masa Kini</strong>
+					<strong>Sistem Informasi dan Literasi Media</strong>
+			     		<strong>Di Kalangan Pelajar Masa Kini</strong>
 					<p>KELOMPOK 1</p> </div>
                 </div>
               </li>
