--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
-				<div class="aligncenter"><h1 class="aligncenter">Our Featured Courses</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</div>
+				<div class="aligncenter"><h1 class="aligncenter">Pendahuluan</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Pada era digital seperti sekarang, informasi dapat diakses dengan mudah melalui berbagai media, baik itu media sosial, situs web, maupun aplikasi. Hal ini memberikan dampak yang besar pada pelajar, terutama dalam hal bagaimana mereka menerima, memproses, dan memanfaatkan informasi. Namun, kemudahan akses ini juga membawa tantangan baru, seperti banjir informasi (information overload), hoaks, dan misinformasi. Oleh karena itu, literasi media menjadi keterampilan yang sangat penting bagi pelajar masa kini agar mereka dapat memilah informasi yang benar dan bermanfaat serta menghindari konten yang menyesatkan.</div>
 			</div>
 		</div>
 	</div>
