--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html">Home</a></li> 
 						<li><a href="about.html">About Us</a></li>
-						<li><a href="courses.html">Courses</a></li>
+<!-- 						<li><a href="courses.html">Courses</a></li> -->
 <!--                         <li><a href="portfolio.html">Portfolio</a></li> -->
 <!--                         <li><a href="pricing.html">Pricing</a></li> -->
                         <li><a href="contact.html">Contact</a></li>
@@ -102,7 +102,7 @@
 		<div class="skill-home"> <div class="skill-home-solid clearfix"> 
 		<div class="col-md-3 text-center">
 		<span class="icons c1"><i class="fa fa-trophy"></i></span> <div class="box-area">
-		<h3>Web Development</h3> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident</p></div>
+		<h3>Pentingnya Sistem Informasi dalam Literasi Media</h3> <p>Sistem informasi yang efektif membantu pelajar mengelola dan mengakses sumber informasi yang valid dan terpercaya.</p></div>
 		</div>
 		<div class="col-md-3 text-center"> 
 		<span class="icons c2"><i class="fa fa-picture-o"></i></span> <div class="box-area">
