--- a/index.html
+++ b/index.html
@@ -106,15 +106,15 @@
 		</div>
 		<div class="col-md-3 text-center"> 
 		<span class="icons c2"><i class="fa fa-picture-o"></i></span> <div class="box-area">
-		<h3>UI Design</h3> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident</p></div>
+		<h3>Tantangan Literasi Media di Kalangan Pelajar</h3></div>
 		</div>
 		<div class="col-md-3 text-center"> 
 		<span class="icons c3"><i class="fa fa-desktop"></i></span> <div class="box-area">
-		<h3>Interaction</h3> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident</p></div>
+		<h3>Strategi Mengembangkan Literasi Media di Kalangan Pelajar</h3></div>
 		</div>
 		<div class="col-md-3 text-center"> 
 		<span class="icons c4"><i class="fa fa-globe"></i></span> <div class="box-area">
-		<h3>User Experiance</h3> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident</p>
+		<h3>Dampak Literasi Media Terhadap Pelajar</h3>
 		</div></div>
 		</div></div>
 		</div> 
