--- a/index.html
+++ b/index.html
@@ -102,19 +102,19 @@
 		<div class="skill-home"> <div class="skill-home-solid clearfix"> 
 		<div class="col-md-3 text-center">
 		<span class="icons c1"><i class="fa fa-trophy"></i></span> <div class="box-area">
-		<h3>Pentingnya Sistem Informasi dalam Literasi Media		</h3></div>
+		<h3>Pentingnya Sistem Informasi dalam Literasi Media</h3></div>
 		</div>
 		<div class="col-md-3 text-center"> 
 		<span class="icons c2"><i class="fa fa-picture-o"></i></span> <div class="box-area">
-		<h3>Tantangan Literasi Media di Kalangan Pelajar		</h3></div>
+		<h3>Tantangan Literasi Media di Kalangan Pelajar</h3></div>
 		</div>
 		<div class="col-md-3 text-center"> 
 		<span class="icons c3"><i class="fa fa-desktop"></i></span> <div class="box-area">
-		<h3>Strategi Mengembangkan Literasi Media di Kalangan Pelajar</h3></div>
+		<h3>Strategi Mengembangkan Literasi Media</h3></div>
 		</div>
 		<div class="col-md-3 text-center"> 
 		<span class="icons c4"><i class="fa fa-globe"></i></span> <div class="box-area">
-		<h3>Dampak Literasi Media Terhadap Pelajar			</h3>
+		<h3>Dampak Literasi Media Terhadap Pelajar</h3>
 		</div></div>
 		</div></div>
 		</div> 
@@ -183,7 +183,7 @@
 				<div class="aligncenter"><h2 class="aligncenter">Courses We Offer</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</div>
 			</div>
 		</div>
-<div class="row">
+<!-- <div class="row">
             <div class="col-md-4">
 			<div class="textbox">
                 <h3>Heading Course</h3>
@@ -217,7 +217,7 @@
 				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
             </div> </div>
         </div>
-</div>
+</div> -->
 </section>
 	<footer>
 	<div class="container">
