--- a/index.html
+++ b/index.html
@@ -71,17 +71,94 @@
     <!-- end slider -->
 
     <section class="callaction">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="aligncenter"><h1 class="aligncenter">Pendahuluan</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Pada era digital seperti sekarang, informasi dapat diakses dengan mudah melalui berbagai media, baik itu media sosial, situs web, maupun aplikasi. Hal ini memberikan dampak yang besar pada pelajar, terutama dalam hal bagaimana mereka menerima, memproses, dan memanfaatkan informasi. Namun, kemudahan akses ini juga membawa tantangan baru, seperti banjir informasi (information overload), hoaks, dan misinformasi. Oleh karena itu, literasi media menjadi keterampilan yang sangat penting bagi pelajar masa kini agar mereka dapat memilah informasi yang benar dan bermanfaat serta menghindari konten yang menyesatkan.</div>
+			</div>
+		</div>
+	</div>
+	</section>
+	<section id="content">
+	
+	
+	<div class="container">
+			<div class="row">
+		<div class="skill-home"> <div class="skill-home-solid clearfix"> 
+		<div class="col-md-3 text-center">
+		<span class="icons c1"><i class="fa fa-trophy"></i></span> <div class="box-area">
+		<h3>Pentingnya Sistem Informasi dalam Literasi Media</h3></div>
+		</div>
+		<div class="col-md-3 text-center"> 
+		<span class="icons c2"><i class="fa fa-picture-o"></i></span> <div class="box-area">
+		<h3>Tantangan Literasi Media di Kalangan Pelajar</h3></div>
+		</div>
+		<div class="col-md-3 text-center"> 
+		<span class="icons c3"><i class="fa fa-desktop"></i></span> <div class="box-area">
+		<h3>Strategi Mengembangkan Literasi Media</h3></div>
+		</div>
+		<div class="col-md-3 text-center"> 
+		<span class="icons c4"><i class="fa fa-globe"></i></span> <div class="box-area">
+		<h3>Dampak Literasi Media Terhadap Pelajar</h3>
+		</div></div>
+		</div></div>
+		</div> 
+		 
+
+	</div>
+	</section>
+	<div class="testimonial-area">
+    <div class="testimonial-solid">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="aligncenter">
-                        <h1 class="aligncenter">Pendahuluan</h1>
-                        <p>Pada era digital seperti sekarang, informasi dapat diakses dengan mudah melalui berbagai media, baik itu media sosial, situs web, maupun aplikasi. Hal ini memberikan dampak yang besar pada pelajar, terutama dalam hal bagaimana mereka menerima, memproses, dan memanfaatkan informasi. Namun, kemudahan akses ini juga membawa tantangan baru, seperti banjir informasi (information overload), hoaks, dan misinformasi. Oleh karena itu, literasi media menjadi keterampilan yang sangat penting bagi pelajar masa kini agar mereka dapat memilah informasi yang benar dan bermanfaat serta menghindari konten yang menyesatkan.</p>
+            <div class="testi-icon-area">
+                <div class="quote">
+                    <i class="fa fa-microphone"></i>
+                </div>
+            </div>
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="">
+                        <a href="#"></a>
+                    </li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1" class="">
+                        <a href="#"></a>
+                    </li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2" class="active">
+                        <a href="#"></a>
+                    </li>
+                    <li data-target="#carousel-example-generic" data-slide-to="3" class="">
+                        <a href="#"></a>
+                    </li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="item">
+                        <p>Blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi.</p>
+                        <p>
+                            <b>- Mark John -</b>
+                        </p>
+                    </div>
+                    <div class="item">
+                        <p>Blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi.</p>
+                        <p>
+                            <b>- Jaison Warner -</b>
+                        </p>
+                    </div>
+                    <div class="item active">
+                        <p>Blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi.</p>
+                        <p>
+                            <b>- Tony Antonio -</b>
+                        </p>
+                    </div>
+                    <div class="item">
+                        <p>Blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi.</p>
+                        <p>
+                            <b>- Leena Doe -</b>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
     <section id="content">
         <div class="container">
