--- a/index.html
+++ b/index.html
@@ -4,14 +4,26 @@
 <meta charset="utf-8">
 <title>Sistem Informasi dan Literasi Media di Kalangan Pelajar Masa Kini</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content="Sistem informasi dan literasi media di kalangan pelajar masa kini" />
+<meta name="description" content="" />
+<meta name="author" content="http://webthemez.com" />
+<!-- css -->
 <link href="css/bootstrap.min.css" rel="stylesheet" />
+<link href="css/fancybox/jquery.fancybox.css" rel="stylesheet">
+<link href="css/jcarousel.css" rel="stylesheet" />
+<link href="css/flexslider.css" rel="stylesheet" />
+<link href="js/owl-carousel/owl.carousel.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet" />
+ 
+<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+<!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
 </head>
 <body>
 <div id="wrapper">
-    <!-- start header -->
-    <header>
+	<!-- start header -->
+	<header>
         <div class="navbar navbar-default navbar-static-top">
             <div class="container">
                 <div class="navbar-header">
@@ -24,18 +36,18 @@
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About Us</a></li>
+                        <li class="active"><a href="index.html">Home</a></li> 
+						<li><a href="about.html">About Us</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </div>
-    </header>
-    <!-- end header -->
-
-    <!-- start slider -->
-    <section id="featured">
+	</header>
+	<!-- end header -->
+	<section id="featured">
+	 
+	<!-- Slider -->
         <div id="main-slider" class="flexslider">
             <ul class="slides">
               <li>
@@ -67,10 +79,10 @@
               </li>
             </ul>
         </div>
-    </section>
-    <!-- end slider -->
-
-    <section class="callaction">
+	<!-- end slider -->
+ 
+	</section>
+	<section class="callaction">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
@@ -159,57 +171,43 @@
             </div>
         </div>
     </div>
+</div>
+<section class="courses">
+<div class="container">
 
-    <section id="content">
-        <div class="container">
-            <!-- Tantangan Literasi Media -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2 class="aligncenter">Tantangan Literasi Media di Kalangan Pelajar</h2>
-                    <p>Pelajar masa kini berada di era yang penuh dengan informasi dari berbagai sumber, namun tidak semua informasi tersebut akurat dan dapat dipercaya. Beberapa tantangan utama yang dihadapi pelajar dalam hal literasi media meliputi:</p>
-                    <ul>
-                        <li><b>Misinformasi dan Hoaks:</b> Banyak pelajar yang kesulitan membedakan mana informasi yang benar dan mana yang hanya spekulasi atau rumor.</li>
-                        <li><b>Kurangnya Pemahaman terhadap Sumber Informasi:</b> Pelajar sering kali tidak memverifikasi sumber informasi yang mereka terima.</li>
-                        <li><b>Kurangnya Pengetahuan Tentang Privasi dan Keamanan Digital:</b> Banyak pelajar yang belum sadar akan pentingnya menjaga data pribadi di internet.</li>
-                    </ul>
-                </div>
-            </div>
-
-            <!-- Pentingnya Sistem Informasi -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2 class="aligncenter">Pentingnya Sistem Informasi dalam Literasi Media</h2>
-                    <p>Sistem informasi yang efektif membantu pelajar mengelola dan mengakses sumber informasi yang valid dan terpercaya. Dengan adanya sistem informasi yang baik, pelajar dapat belajar secara lebih mandiri dan kritis.</p>
-                </div>
-            </div>
-
-            <!-- Strategi Mengembangkan Literasi Media -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2 class="aligncenter">Strategi Mengembangkan Literasi Media di Kalangan Pelajar</h2>
-                    <p>Beberapa langkah yang dapat diambil untuk meningkatkan literasi media di kalangan pelajar adalah melalui pendidikan literasi media di sekolah, mendorong penggunaan teknologi secara bijak, serta pelatihan dan workshop terkait keamanan digital dan verifikasi informasi.</p>
-                </div>
-            </div>
-
-            <!-- Dampak Literasi Media -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2 class="aligncenter">Dampak Literasi Media Terhadap Pelajar</h2>
-                    <p>Dengan meningkatnya literasi media, pelajar dapat lebih kritis dalam mengonsumsi informasi, menjaga keamanan digital mereka, dan menjadi lebih mandiri dalam belajar.</p>
-                </div>
-            </div>
-
-            <!-- Kesimpulan -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2 class="aligncenter">Kesimpulan</h2>
-                    <p>Sistem informasi dan literasi media adalah dua hal yang sangat penting di era digital ini, terutama bagi pelajar yang terus-menerus terpapar informasi dari berbagai sumber. Dengan meningkatkan literasi media, pelajar dapat menjadi lebih kritis dan bijak dalam memilih dan mengonsumsi informasi.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <footer>
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="aligncenter"><h2 class="aligncenter">Tantangan Literasi Media di Kalangan Pelajar</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Pelajar masa kini berada di era yang penuh dengan informasi dari berbagai sumber, namun tidak semua informasi tersebut akurat dan dapat dipercaya. Beberapa tantangan utama yang dihadapi pelajar dalam hal literasi media meliputi:
+<br><b>A. Misinformasi dan Hoaks
+<br>Misinformasi adalah informasi yang salah namun disebarkan tanpa niat menyesatkan, sementara hoaks adalah informasi palsu yang sengaja dibuat untuk menipu. Banyak pelajar yang kesulitan membedakan mana informasi yang benar dan mana yang hanya spekulasi atau rumor. Ini menjadi tantangan utama dalam memastikan mereka mendapatkan informasi yang kredibel.
+<br><b>B. Kurangnya Pemahaman terhadap Sumber Informasi
+<br>Banyak pelajar yang tidak terbiasa mengecek sumber informasi yang mereka terima. Hal ini dapat menyebabkan penyebaran informasi yang tidak akurat atau tidak sahih, terutama di media sosial.
+<br><b>C. Kurangnya Pengetahuan Tentang Privasi dan Keamanan Digital
+<br>Literasi media tidak hanya sebatas memahami informasi yang dikonsumsi, tetapi juga mencakup cara menjaga privasi dan keamanan digital. Banyak pelajar yang masih belum sadar akan pentingnya menjaga data pribadi mereka di internet.</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="aligncenter"><h2 class="aligncenter">Pentingnya Sistem Informasi dalam Literasi Media</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="aligncenter"><h2 class="aligncenter">Strategi Mengembangkan Literasi Media di Kalangan Pelajar</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="aligncenter"><h2 class="aligncenter">Dampak Literasi Media Terhadap Pelajar</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="aligncenter"><h2 class="aligncenter">Kesimpulan</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</div>
+			</div>
+		</div>
+</section>
+	<footer>
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-3">
