--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="aligncenter"><h2 class="aligncenter">Tantangan Literasi Media di Kalangan Pelajar</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Pelajar masa kini berada di era yang penuh dengan informasi dari berbagai sumber, namun tidak semua informasi tersebut akurat dan dapat dipercaya. Beberapa tantangan utama yang dihadapi pelajar dalam hal literasi media meliputi:
-<br><b>A. Misinformasi dan Hoaks
+<br>A. Misinformasi dan Hoaks
 <br>Misinformasi adalah informasi yang salah namun disebarkan tanpa niat menyesatkan, sementara hoaks adalah informasi palsu yang sengaja dibuat untuk menipu. Banyak pelajar yang kesulitan membedakan mana informasi yang benar dan mana yang hanya spekulasi atau rumor. Ini menjadi tantangan utama dalam memastikan mereka mendapatkan informasi yang kredibel.
-<br><b>B. Kurangnya Pemahaman terhadap Sumber Informasi
+<br>B. Kurangnya Pemahaman terhadap Sumber Informasi
 <br>Banyak pelajar yang tidak terbiasa mengecek sumber informasi yang mereka terima. Hal ini dapat menyebabkan penyebaran informasi yang tidak akurat atau tidak sahih, terutama di media sosial.
-<br><b>C. Kurangnya Pengetahuan Tentang Privasi dan Keamanan Digital
+<br>C. Kurangnya Pengetahuan Tentang Privasi dan Keamanan Digital
 <br>Literasi media tidak hanya sebatas memahami informasi yang dikonsumsi, tetapi juga mencakup cara menjaga privasi dan keamanan digital. Banyak pelajar yang masih belum sadar akan pentingnya menjaga data pribadi mereka di internet.</div>
 			</div>
 		</div>
