--- a/index.html
+++ b/index.html
@@ -178,44 +178,44 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="aligncenter"><h2 class="aligncenter">Tantangan Literasi Media di Kalangan Pelajar</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Pelajar masa kini berada di era yang penuh dengan informasi dari berbagai sumber, namun tidak semua informasi tersebut akurat dan dapat dipercaya. Beberapa tantangan utama yang dihadapi pelajar dalam hal literasi media meliputi:
-<br><br><b>A. Misinformasi dan Hoaks
+<br><br>A. Misinformasi dan Hoaks
 <br>Misinformasi adalah informasi yang salah namun disebarkan tanpa niat menyesatkan, sementara hoaks adalah informasi palsu yang sengaja dibuat untuk menipu. Banyak pelajar yang kesulitan membedakan mana informasi yang benar dan mana yang hanya spekulasi atau rumor. Ini menjadi tantangan utama dalam memastikan mereka mendapatkan informasi yang kredibel.
-<br><b>B. Kurangnya Pemahaman terhadap Sumber Informasi
+<br>B. Kurangnya Pemahaman terhadap Sumber Informasi
 <br>Banyak pelajar yang tidak terbiasa mengecek sumber informasi yang mereka terima. Hal ini dapat menyebabkan penyebaran informasi yang tidak akurat atau tidak sahih, terutama di media sosial.
-<br><b>C. Kurangnya Pengetahuan Tentang Privasi dan Keamanan Digital
+<br>C. Kurangnya Pengetahuan Tentang Privasi dan Keamanan Digital
 <br>Literasi media tidak hanya sebatas memahami informasi yang dikonsumsi, tetapi juga mencakup cara menjaga privasi dan keamanan digital. Banyak pelajar yang masih belum sadar akan pentingnya menjaga data pribadi mereka di internet.</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="aligncenter"><h2 class="aligncenter">Pentingnya Sistem Informasi dalam Literasi Media</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Sistem informasi yang efektif membantu pelajar mengelola dan mengakses sumber informasi yang valid dan terpercaya. Beberapa keuntungan sistem informasi dalam konteks literasi media di kalangan pelajar adalah:
-<br><br><b>A. Akses Informasi Terpercaya
+<br><br>A. Akses Informasi Terpercaya
 <br>Sistem informasi memungkinkan pelajar mengakses sumber yang sahih, seperti jurnal akademik, ensiklopedia digital, atau situs web pendidikan. Dengan adanya sistem informasi yang baik, pelajar dapat belajar secara lebih mandiri dan kritis.
-<br><b>B. Fasilitas Pencarian yang Mudah
+<br>B. Fasilitas Pencarian yang Mudah
 <br>Sistem informasi yang dilengkapi dengan fitur pencarian yang canggih memudahkan pelajar dalam menemukan informasi yang mereka butuhkan tanpa harus tersesat dalam lautan informasi yang kurang valid.
-<br><b>C. Penyediaan Konten Edukatif
+<br>C. Penyediaan Konten Edukatif
 <br>Sistem informasi dapat memfasilitasi penyediaan konten-konten edukatif yang dapat diakses oleh pelajar kapan saja. Ini sangat penting terutama di masa pandemi ketika pembelajaran daring semakin dominan.</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="aligncenter"><h2 class="aligncenter">Strategi Mengembangkan Literasi Media di Kalangan Pelajar</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Beberapa langkah yang dapat diambil untuk meningkatkan literasi media di kalangan pelajar adalah:
-<br><br><b>A. Pendidikan Literasi Media di Sekolah
+<br><br>A. Pendidikan Literasi Media di Sekolah
 <br>Pendidikan tentang literasi media perlu dimasukkan ke dalam kurikulum sekolah. Pelajar perlu diajarkan bagaimana memverifikasi sumber informasi, memahami bias dalam media, dan mengenali berita palsu.
-<br><b>B. Mendorong Penggunaan Teknologi dengan Bijak
+<br>B. Mendorong Penggunaan Teknologi dengan Bijak
 <br>Pihak sekolah dan orang tua harus memberikan pemahaman tentang penggunaan teknologi secara bijak, baik dalam hal penggunaan media sosial maupun dalam mengonsumsi berita di internet.
-<br><b>C. Pelatihan dan Workshop
+<br>C. Pelatihan dan Workshop
 <br>Workshop atau pelatihan tentang cara menggunakan teknologi untuk mencari dan memproses informasi dengan benar sangat diperlukan. Ini bisa mencakup pelatihan tentang cara menggunakan mesin pencari dengan efektif, memahami literasi digital, hingga menjaga privasi dan keamanan di internet.
-<br><b>D. Peran Orang Tua dan Guru
+<br>D. Peran Orang Tua dan Guru
 <br>Orang tua dan guru juga memainkan peran penting dalam membimbing pelajar dalam memahami dan mengembangkan literasi media. Mereka perlu memberikan contoh bagaimana cara memilih informasi yang baik dan mendorong anak-anak untuk berpikir kritis terhadap konten media yang mereka konsumsi.</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="aligncenter"><h2 class="aligncenter">Dampak Literasi Media Terhadap Pelajar</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Peningkatan literasi media di kalangan pelajar memberikan berbagai dampak positif, di antaranya:
-<br><br><b>A. Kemandirian dalam Belajar: Pelajar dapat belajar mandiri dengan mengeksplorasi informasi secara kritis dan objektif.
-<br><b>B. Kemampuan Berpikir Kritis: Literasi media melatih pelajar untuk tidak hanya menerima informasi begitu saja, melainkan menganalisis dan menilai kebenaran serta dampaknya.
-<br><b>C. Keamanan Digital: Pelajar yang paham literasi media cenderung lebih berhati-hati dalam menjaga privasi dan data pribadi mereka di internet.</div>
+<br><br>A. Kemandirian dalam Belajar: Pelajar dapat belajar mandiri dengan mengeksplorasi informasi secara kritis dan objektif.
+<br>B. Kemampuan Berpikir Kritis: Literasi media melatih pelajar untuk tidak hanya menerima informasi begitu saja, melainkan menganalisis dan menilai kebenaran serta dampaknya.
+<br>C. Keamanan Digital: Pelajar yang paham literasi media cenderung lebih berhati-hati dalam menjaga privasi dan data pribadi mereka di internet.</div>
 			</div>
 		</div>
 		<div class="row">
