--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">RUSERBVOK</a>
+<!--                     <a class="navbar-brand" href="index.html">RUSERBVOK</a> -->
+		    <a class="navbar-brand" href="index.html"><img src="img/vokasi.png" alt="logo"/></a>
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
@@ -229,18 +230,16 @@
 		<div class="row">
 			<div class="col-lg-3">
 				<div class="widget">
-					<h5 class="widgetheading">Our Contact</h5>
+					<h5 class="widgetheading">Kontak Kami</h5>
 					<address>
-					<strong>Abovecompany Inc</strong><br>
-					JC Main Road, Near Silnile tower<br>
-					 Pin-21542 NewYork US.</address>
+					<strong>PROGRAM VOKASI UNG</strong></address>
 					<p>
-						<i class="icon-phone"></i> (123) 456-789 - 1255-12584 <br>
-						<i class="icon-envelope-alt"></i> email@domainname.com
+						<i class="icon-phone"></i> (62) 821 9620 4946 <br>
+						<i class="icon-envelope-alt"></i> programvokasi@ung.ac.id
 					</p>
 				</div>
 			</div>
-			<div class="col-lg-3">
+<!-- 			<div class="col-lg-3">
 				<div class="widget">
 					<h5 class="widgetheading">Quick Links</h5>
 					<ul class="link-list">
@@ -271,7 +270,7 @@
 						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
 					</ul>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 	<div id="sub-footer">
@@ -280,11 +279,11 @@
 				<div class="col-lg-6">
 					<div class="copyright">
 						<p>
-							<span>&copy; Above Site All right reserved. Template By </span><a href="http://webthemez.com" target="_blank">WebThemez</a>
+							<span>&copy; Copyright@2024. Web By </span><a href="https://sekolahvokasi.ung.ac.id/" target="_blank">Vokasikuat</a>
 						</p>
 					</div>
 				</div>
-				<div class="col-lg-6">
+<!-- 				<div class="col-lg-6">
 					<ul class="social-network">
 						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
 						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
@@ -292,7 +291,7 @@
 						<li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
 						<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
 					</ul>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
