--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Home</a></li> 
-						<li><a href="about.html">About Us</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li class="active"><a href="index.html">Dashboard</a></li> 
+			<li><a href="about.html">Tentang Kami</a></li>
+                        <li><a href="contact.html">Kontak</a></li>
                     </ul>
                 </div>
             </div>
@@ -239,19 +239,17 @@
 					</p>
 				</div>
 			</div>
-<!-- 			<div class="col-lg-3">
+			<div class="col-lg-3">
 				<div class="widget">
-					<h5 class="widgetheading">Quick Links</h5>
+					<h5 class="widgetheading">Dashboard</h5>
 					<ul class="link-list">
-						<li><a href="#">Latest Events</a></li>
-						<li><a href="#">Terms and conditions</a></li>
-						<li><a href="#">Privacy policy</a></li>
-						<li><a href="#">Career</a></li>
-						<li><a href="#">Contact us</a></li>
+						<li><a href="index.html">Dashboard</a></li>
+						<li><a href="about.html">Tentang Kami</a></li>
+						<li><a href="contact.html">Kontak</a></li>
 					</ul>
 				</div>
 			</div>
-			<div class="col-lg-3">
+<!-- 			<div class="col-lg-3">
 				<div class="widget">
 					<h5 class="widgetheading">Latest posts</h5>
 					<ul class="link-list">
