--- a/index.html
+++ b/index.html
@@ -249,17 +249,18 @@
 					</ul>
 				</div>
 			</div>
-<!-- 			<div class="col-lg-3">
+			<div class="col-lg-3">
 				<div class="widget">
-					<h5 class="widgetheading">Latest posts</h5>
-					<ul class="link-list">
+					<h5 class="widgetheading">Tentang Kami</h5>
+					<img width="150" src="img/ung.png" class="rounded" alt="SV">
+<!-- 					<ul class="link-list">
 						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
 						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
 						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-					</ul>
+					</ul> -->
 				</div>
 			</div>
-			<div class="col-lg-3">
+<!-- 			<div class="col-lg-3">
 				<div class="widget">
 					<h5 class="widgetheading">Recent News</h5>
 					<ul class="link-list">
